traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:17: error: finale is already defined as variable finale
def finale(): Boolean = {
    ^TraversalByColumn:13: error: reassignment to val
      finale=1
            ^TraversalByColumn:17: error: type mismatch;
 found   : Unit
 required: Boolean
def finale(): Boolean = {
                        ^